src/components/MainBlock/MainBlock.module.scss
@import "~@santiment-network/ui/mixins.scss";

.backgroundContainer {
  display: flex;
  z-index: 0;
  background-image: url('./images/curved-line.svg');
  background-position: center;
  background-repeat: no-repeat;

  :global(.tablet) &,
  :global(.phone-xs) &,
  :global(.phone) & {
    background-image: none;
  }
}

.wrapper {
  max-width: 1140px;
  padding: 0;
  padding-top: 108px;
  margin: 0 auto;
  width: 100%;

  :global(.tablet) &,
  :global(.phone-xs) &,
  :global(.phone) & {
    padding-top: 46px;
  }

  @include responsive("desktop", "laptop", "tablet") {
    animation-name: shiftUp;
    animation-timing-function: cubic-bezier(0, 0.96, 1, 1);
    animation-duration: 0.8s;
    animation-delay: 0.6s;
    animation-fill-mode: both;
  }
}

.leftBlock {
  max-width: 568px;
  margin: 0 0 140px;

  :global(.tablet) &,
  :global(.phone-xs) &,
  :global(.phone) & {
    margin-bottom: 32px;
  }
}

.leftBlock,
.logosWrapper {
  @include responsive("laptop") {
    padding: 0 24px;
  }

  @include responsive("phone", "phone-xs", "tablet") {
    padding: 0 16px;
  }
}

.title {
  @include text("h1");
  font-weight: 500;

  :global(.phone-xs) &,
  :global(.phone) & {
    --margin: 12px;
    @include text("h3");
  }
}

.description {
  color: #a2a7bd;
  margin-bottom: 48px;

  :global(.phone-xs) &,
  :global(.phone) & {
    @include text("body-2");
    margin-bottom: 24px;
  }
}

.btn {
  height: 40px;
  max-width: 196px;
  border-radius: 6px;

  :global(.phone-xs) &,
  :global(.phone) & {
    height: 40px;
    max-width: 100%;
  }
}

.btnWrapper {
  margin-left: 0;
  display: block !important;
}

.img {
  height: 100%;

  :global(.tablet) &,
  :global(.phone-xs) &,
  :global(.phone) & {
    width: 100%;
  }
}

@keyframes shiftUp {
  0% {
    transform: translateY(20px);
    opacity: 0;
  }

  100% {
    transform: translateY(0);
    opacity: 1;
  }
}


.illustrationRight {
  height: 100%;
  position: absolute;
  top: 0;
  right: 0;
  z-index: -1;

  :global(.tablet) &,
  :global(.phone-xs) &,
  :global(.phone) & {
    display: none;
  }
}

.illustrationBottom {
  display: none;

  :global(.tablet) &,
  :global(.phone-xs) &,
  :global(.phone) & {
    display: block;
  }
}

.logosWrapper {
  width: 100%;
  padding-bottom: 76px;

  :global(.tablet) &,
  :global(.phone-xs) &,
  :global(.phone) & {
    position: absolute;
    bottom: 0;
    padding-bottom: 40px;
  }
}

